components/afb208j3d-go/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: afb208j3d-go
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: afb208j3d-go 
  name: afb208j3d-go
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: afb208j3d-go
    weight: 100
